# LingoEDU

./: .gitignore  README.md
evaluation/: README.md  evaluate.py  evaluate_apis.py  pyproject.toml
evaluation/src/edu_evaluator/: __init__.py  definitions.py
evaluation/src/edu_evaluator/metrics/: ted.py
evaluation/src/edu_evaluator/utils/: md_line_utils.py  md_tree_utils.py
experiments/: README.md
experiments/BrowseComp-ZH/: README.md  deepsearch.py  deepsearch.sh  rag.py  rag.sh  run.py  run.sh  run_acc_calibration_error.py
experiments/BrowseComp-ZH/data/: browsecomp-zh-decrypted.xlsx
experiments/BrowseComp-ZH/outcome_edu_rerank/: infer_acc.csv
experiments/BrowseComp-ZH/outcome_self_sum/: infer_acc.csv
experiments/BrowseComp-ZH/raw_data/: browsecomp-zh-decrypted.json
experiments/HLE/: README.md  hle.json  hle_score.py  main.py  search_tool.py  test.json
experiments/HLE/llm_agent/: base_agent.py
experiments/HLE/llm_agent/tools/: tool_manager.py
experiments/HLE/prompt/: Template.py  select_prefix.txt  select_user.txt  solver_prefix.txt  solver_user.txt
experiments/LongBench/: README.md  config_example.py  edu_rerank_example.py
inference/: README.md  infer.py  pyproject.toml
inference/src/edu_core/: edu_func.py  edu_type.py  edu_utils.py
