[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edu_core"
version = "1.0.0"
description = "EDU推理组件"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "httpx>=0.23.0",
    "jinja2>=3.1.6",
    "numpy>=1.21.0",
    "lxml>=4.9.0",
    "transformers>=4.30.0",
    "loguru>=0.7.0",
    "tqdm>=4.64.0",
    "vllm>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "build>=0.10.0",
    "bumpversion>=0.6.0",
    "twine>=6.1.0",
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = { find = { where = ["src"] } }

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
